--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,9 @@
   margin: 0;
   padding: 0;
 }
+body {
+  background-color: #f1f1f3;
+}
 /* Start Global Styles Section */
 /* Here button Section */
 .btn {
@@ -29,7 +32,7 @@
 /* End End Global Styles Section */
 
 /* Start Header Section Styles */
-.header-section {
+#header-section {
 }
 #logo-title {
   font-size: 32px;
@@ -66,6 +69,9 @@ nav > ul > li > a {
 /* End Header Section Styles */
 
 /* Start Main Section Styles */
+#main-section {
+  display: inline-block;
+}
 #Section-1 {
 }
 .section-container {
@@ -235,6 +241,7 @@ nav > ul > li > a {
   box-sizing: border-box;
   border: 1px solid rgba(14, 14, 14, 0.15);
   border-radius: 16px;
+  background-color: #ffffff;
   /* background: rgb(255, 255, 255); */
 }
 .Dr-younus-name {
@@ -250,8 +257,141 @@ nav > ul > li > a {
   font-family: Fira Sans;
   font-size: 15px;
 }
+#Section-3 {
+}
+.news-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px 100px 20px 100px;
+  padding: 40px 20px 40px 20px;
+  width: 1127px;
+  gap: 42px;
+  border-radius: 20px;
+  background: #ffffff;
+  box-sizing: border-box;
+  border: none;
+  border-radius: 16px;
+}
+.news-heading {
+  font-size: 40px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  margin-left: 100px;
+}
+.news-summary {
+  font-size: 16px;
+  margin-left: 100px;
+  margin-right: 100px;
+}
+.satel-img {
+  border-radius: 20px;
+}
+.Satel-name {
+  color: rgba(14, 14, 14, 0.8);
+  font-family: Fira Sans;
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 38px;
+  letter-spacing: 0%;
+  text-align: left;
+}
+.logo-img {
+}
+.date-time {
+  display: flex;
+  gap: 20px;
+  margin: 10px 0px 10px 0px;
+}
+#Section-4 {
+  text-align: center;
+  /* margin-left: 100px;
+  margin-right: 100px; */
+  width: 1127px;
+  margin: 20px 100px 30px 100px;
+}
+.btn-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.contant {
+  text-align: center;
+}
+.big-btn {
+}
+.btn-box {
+  font-size: 35px;
+  font-weight: bold;
+  border-radius: 8px;
+  margin: 25px 20px;
+  padding: 30px 40px;
+  border: none;
+  background-color: #ffffff;
+}
+.btn-box2-4 {
+  font-size: 35px;
+  font-weight: bold;
+  border-radius: 8px;
+  margin: 25px 20px;
+  padding: 30px 40px;
+  border: none;
+  background-color: #c6e4d6;
+}
+.btn-box2-4:hover {
+  background-color: rgb(13, 70, 13);
+}
+.btn-box:hover {
+  background-color: rgb(13, 70, 13);
+}
+.input-box {
+  padding: 20px 40px 20px 40px;
+  width: 1050px;
+  height: 15px;
+  text-align: center;
+  border: none;
+  border-radius: 5px;
+  background-color: #ffffff;
+  /* margin-left: 100px; */
+  /* margin-right: 100px; */
+}
+.btn-done {
+  font-size: 15px;
+  font-weight: bold;
+  border-radius: 5px;
+  background: #006a50;
+  margin-top: 24px;
+  padding: 17px 34px 17px 34px;
+  border: none;
+  text-align: center;
+}
+.btn-done:hover {
+  background-color: rgb(3, 41, 3);
+  color: rgb(235, 232, 228);
+  font-size: 16px;
+}
+input {
+  font-size: 16px;
+}
+input::placeholder {
+  font-size: 16px;
+}
 /* End Main Section Styles */
 
 /* Start Footer Section Styles */
-
+#Section-5{
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(124, 92, 92) ;
+  margin: 50px;
+}
+.subscribe-btn{
+  outline: none;
+}
+.search{
+  margin: 0px;
+  gap: 0px;
+}
 /* End Footer Section Styles */
