--- a/styles/style.css
+++ b/styles/style.css
@@ -306,10 +306,10 @@ nav > ul > li > a {
 }
 #Section-4 {
   text-align: center;
-  /* margin-left: 100px;
-  margin-right: 100px; */
-  width: 1127px;
-  margin: 20px 100px 30px 100px;
+  margin-left: 100px;
+  margin-right: 100px;
+  /* margin: 10px 100px 20px 100px; */
+  /* padding: 80px 100px 80px 100px; */
 }
 .btn-container {
   display: flex;
@@ -382,16 +382,55 @@ input::placeholder {
 /* Start Footer Section Styles */
 #Section-5{
   flex-direction: column;
+  background-color: #C6E4D6 ;
+  /* margin: auto; */
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgb(124, 92, 92) ;
-  margin: 50px;
-}
-.subscribe-btn{
-  outline: none;
+  gap: 15px;
+  margin: 10px 100px 20px 100px;
+  padding: 80px 100px 80px 100px;
+  border-radius: 10px;
 }
 .search{
-  margin: 0px;
+  display: flex;
+  align-items: center;
   gap: 0px;
 }
+section>form>input{
+  border: none;
+  padding: 9px;
+  border-radius: 10px 0 0 10px;
+}
+section>form>button{
+  border: none;
+  padding: 11px;
+  background-color: rgb(0, 106, 80);
+  border-radius: 0 10px 10px 0;
+}
+#Section-6{
+  display: flex;
+  flex-direction: column;
+  margin: 10px 125px 20px 125px;
+}
+.social-heading{
+  font-size: 35px;
+  font-weight: bold;
+  margin: 15px 100px 20px 100px;
+  text-align: center;
+}
+.social-icon-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.social-icon{
+  width: 30px;
+  height: 30px;
+  margin: 20px ;
+}
 /* End Footer Section Styles */
+/* All Design Complete */
